# llsi

./: .flake8  .gitattributes  404.html  CHANGELOG.md  CONTRIBUTING.md  INTERPOLATION_GUIDE.md  LICENSE  MANIFEST.in  Makefile  README.md  SYSIDDATA_REVIEW.md  build.sh  example.py  example_diss.py  example_diss_clone.ipynb  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: black.yml  publish-docs.yml  python-package.yml  python-publish.yml  python-publish.yml.txt
api/figure/: index.html
api/ltimodel/: index.html
api/polynomialmodel/: index.html
api/statespacemodel/: index.html
api/subspace/: index.html
api/sysiddata/: index.html
api/utils/: index.html
data/: heated_wire_data.npy
docs/: index.md
docs/api/: figure.md  ltimodel.md  polynomialmodel.md  statespacemodel.md  subspace.md  sysiddata.md  utils.md
docs/tutorials/: advanced.md  getting_started.md
notebooks/: differentiation_demo.ipynb  example.ipynb  example_diss.ipynb  example_diss_clone.ipynb  example_diss_sarimax.ipynb  sysiddata_repr_demo.ipynb
search/: search_index.json
src/: statespacemodel.py  subspace.py
src/llsi/: __init__.py  arx.py  autoident.py  controllerdesigner.py  figure.py  firor.py  ltimodel.py  math.py  matlab.py  mcsiggen.py  pem.py  polynomialmodel.py  sklearn.py  statespacemodel.py  subspace.py  sysidalg.py  sysidalgbase.py  sysiddata.py  sysidresults.py  utils.py
tests/: conftest.py  test_arx.py  test_autoident.py  test_controllerdesigner.py  test_covariance.py  test_figure.py  test_firor.py  test_from_logfile.py  test_interop.py  test_ltimodel.py  test_math.py  test_math_eval.py  test_math_eval_extra.py  test_math_evaluate_state_space_more.py  test_matlab.py  test_pem.py  test_polynomialmodel.py  test_serialization.py  test_sklearn.py  test_sklearn_wrapper_extra.py  test_statespacemodel.py  test_statespacemodel2.py  test_subspace.py  test_sysidalg.py  test_sysidalgbase.py  test_sysiddata.py  test_sysiddata_extra.py  test_sysiddata_inplace.py  test_sysiddata_misc.py  test_sysiddata_more_ops.py  test_sysiddata_prbs_and_ops.py  test_utils.py
tutorials/advanced/: index.html
tutorials/getting_started/: index.html
