[build-system]
requires = ["hatchling>=1.4.1"]
build-backend = "hatchling.build"

[project]
name = "llsi"
description = "A lightweight linear system identification tool"
version = "0.0.2"
authors = [
  { name="Armin Witte"},
]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
	"numpy>=1.19.0",
	"scipy>=1.7.0",
]
[project.urls]
"Homepage" = "https://github.com/arminwitte/llsi"
"Bug Tracker" = "https://github.com/arminwitte/llsi/issues"
