[build-system]
requires = ["hatchling>=1.4.1"]
build-backend = "hatchling.build"

[project]
name = "llsi"
description = "A lightweight linear system identification tool"
version = "0.5.0"
authors = [
  { name="Armin Witte"},
]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
keywords = [
    "system identification",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
	"numpy>=1.19.0",
	"scipy>=1.8.0",
	"matplotlib",
	"numba",
	"tqdm",
	"pandas",
	"statsmodels>=0.14.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "coverage",
    "ruff",
    "build",
    "twine",
    "scikit-learn",
]
sklearn = [
    "scikit-learn",
]

[project.urls]
"Homepage" = "https://github.com/arminwitte/llsi"
"Bug Tracker" = "https://github.com/arminwitte/llsi/issues"

[tool.coverage.run]
source = ['llsi']
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.ruff]
line-length = 120
target-version = "py38"
exclude = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
